Remove javax.xml dependency